--- a/BigSchool_VoDucLoi/BigSchool_VoDucLoi.csproj
+++ b/BigSchool_VoDucLoi/BigSchool_VoDucLoi.csproj
@@ -216,6 +216,10 @@
     <Compile Include="Migrations\202205300653534_PopolateCategoryTable.Designer.cs">
       <DependentUpon>202205300653534_PopolateCategoryTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206060646449_AddNameColumnToApplicationUser.cs" />
+    <Compile Include="Migrations\202206060646449_AddNameColumnToApplicationUser.Designer.cs">
+      <DependentUpon>202206060646449_AddNameColumnToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -312,6 +316,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202205300653534_PopolateCategoryTable.resx">
       <DependentUpon>202205300653534_PopolateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206060646449_AddNameColumnToApplicationUser.resx">
+      <DependentUpon>202206060646449_AddNameColumnToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
